FEAT: Ajout de sonar cube